hledger/test/errors/accounts.j
#!/usr/bin/env -S hledger check accounts -f

1/1
  (a)  1
